<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="10dp"
    app:cardElevation="10dp"
    app:cardMaxElevation="10dp"
    app:cardUseCompatPadding="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp">

        <ImageView
            android:id="@+id/imageViewAcne"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="4dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/ic_placeholder"
            android:contentDescription="@string/acne_types_image" />

        <TextView
            android:id="@+id/textViewAcneType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/dmsans_black"
            android:text="@string/acne_a"
            android:textSize="17sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            app:layout_constraintStart_toEndOf="@+id/imageViewAcne"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewAcneDescription"
            android:layout_width="208dp"
            android:layout_height="93dp"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/dmsans_black"
            android:textColor="@color/black"
            android:text="@string/lorem_ipsum_medium"
            android:textSize="11sp"
            android:maxLines="6"
            android:ellipsize="end"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/imageViewAcne"
            app:layout_constraintTop_toBottomOf="@+id/textViewAcneType" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>